--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -172,17 +172,17 @@
                 </div>
             </header>
             <section class="section-service">
-                <div class="padding-global">
+                <div class="padding-global pg-55">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="feature-component">
-                                <h3 id="about-us-heading">About Us</h3>
+                                <h3 id="about-us-heading">Democratizing Artificial Intelligence</h3>
                                 <div>
                                     <p id="paragraph-1" class="paragraph-first">
                                         Intellifind is a sophisticated multimodal Al platform designed to democratize
                                         access to Al for SMBs, enabling them to easily manage and interact with their
                                         data across a wide range of document types, including spreadsheets, images,
-                                        videos, and PDFs, without requiring any technicalexpertise. Intellifind features
+                                        videos, and PDFs, without requiring any technical expertise. Intellifind features
                                         customizable workspaces for specific business functions, such as inventory and
                                         invoicing.
                                     </p>
@@ -235,7 +235,7 @@
                                     </div>
                                 </div>
 
-                                <div class="margin-bottom margin-xxlarge">
+                                <div class="margin-bottom margin-xxlarge mb-32">
 
                                     <!-- Cards start -->
 
@@ -424,14 +424,13 @@
             </header>
 
             <section class="section-features" id="knowledge-database">
-                <div class="padding-global">
+                <div class="padding-global mt-33">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="w-layout-grid features-component">
                                 <div class="features-content-left">
                                     <div class="margin-bottom margin-small">
-                                        <h2><span class="chatbot-tagline">Get to know our<br>Knowledge
-                                                Database</span><br></h2>
+                                        <h2><span class="chatbot-tagline">Unlock Insights with Our Knowledge Database</span><br></h2>
                                     </div>
                                     <!-- <p class="header-subcontent"></p> -->
                                 </div>
@@ -494,8 +493,8 @@
             </section>
 
             <!-- 2nd for invoicewhiz content -->
-            <header class="invoicewhiz-section" id="invoicewhiz">
-                <div class="padding-global">
+            <header class="invoicewhiz-section mt-0" id="invoicewhiz">
+                <div class="padding-global mt-0">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="video-header-component">
@@ -558,13 +557,13 @@
 
 
             <section class="invoicewhiz-section-features" id="know-our-invoice">
-                <div class="padding-global">
+                <div class="padding-global mt-33">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="w-layout-grid features-component-invoicewhiz">
                                 <div class="invoicewhiz-features-content-left">
                                     <div class="margin-bottom margin-small">
-                                        <h2 class="invoicewhiz-tagline">Get to know our<br>Invoice
+                                        <h2 class="invoicewhiz-tagline">Streamline Your <br> Invoices with Ease
                                         </h2>
                                     </div>
                                     <p class="header-subcontent"></p>
@@ -678,7 +677,7 @@
             </header>
 
             <section class="section-features" id="know-our-inventory">
-                <div class="padding-global">
+                <div class="padding-global mt-33">
                     <div class="container-large">
                         <div class="padding-section-large">
                             <div class="w-layout-grid features-component">
@@ -736,7 +735,7 @@
             <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100"
                 class="pricing-component w-tabs" id="Pricing">
                 <div>
-                    <h2 id="why-we">Why We Do This?</h2>
+                    <h2 id="why-we">Why are we doing this?</h2>
                     <p id="paragraph-3">
 
                         We recognized that most Al solutions are tailored for large
@@ -1059,7 +1058,7 @@
 
         <header class="section-header background-cell">
             <div data-w-id="b0ffe848-4427-783a-0304-605d94032108" class="cta-circle"></div>
-            <div class="padding-global">
+            <div class="padding-global mt-0">
                 <!-- <div class="text-block-6">Get Intelligent Today. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Get<span>
                         Intellifind.ai!</span></div> -->
                 <div class="text-block-6">Get Intelligent.<span>
@@ -1185,7 +1184,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="margin-top margin-xxlarge">
+                        <!-- <div class="margin-top margin-xxlarge">
                             <div class="text-align-center">
                                 <div class="max-width-medium align-center">
                                     <div class="margin-bottom margin-xsmall">
@@ -1198,13 +1197,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </section>
     </div>
-    <hr>
+    <hr class="footer-hr">
     <footer class="footer-component">
         <div>
             <div class="footer-flex">
