--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -683,8 +683,7 @@
                             <div class="w-layout-grid features-component">
                                 <div class="features-content-left">
                                     <div class="margin-bottom margin-small">
-                                        <h2><span class="intelliventory-tagline">Get to know
-                                                our<br>Inventory</span><br></h2>
+                                        <h2><span class="intelliventory-tagline">Stay on Top of Your <br> Inventory</span></h2>
                                     </div>
                                     <p class="header-subcontent"></p>
                                 </div>
@@ -1061,8 +1060,8 @@
             <div class="padding-global mt-0">
                 <!-- <div class="text-block-6">Get Intelligent Today. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Get<span>
                         Intellifind.ai!</span></div> -->
-                <div class="text-block-6">Get Intelligent.<span>
-                    Get Intellifind</span> Today!</div>
+                <div class="text-block-6">Get Intelligent. Get<span>
+                    Intellifind</span> Today!</div>
                 <div class="container-small">
                     <div class="padding-section-large">
                         <div class="cta-content slide-in-0-6s">
